fix text overflow

--- a/public/html/admin/assets/scss/style.scss
+++ b/public/html/admin/assets/scss/style.scss
@@ -1638,3 +1638,12 @@ a{
         font-size: smaller;
     }
 }
+
+.text-overflow{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+}
